--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@ericz1803/react-google-calendar": "^4.2.1",
+    "react-google-calendar-api": "^1.4.0",
     "bootstrap": "^5.1.3",
     "daisyui": "^2.17.0",
+    "google-calendar": "^1.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
